--- a/src/main/java/com/example/totnghiep/giaodien/style.css
+++ b/src/main/java/com/example/totnghiep/giaodien/style.css
@@ -16,6 +16,16 @@ header{
     justify-content: space-between;
     padding: 15px 50px;
     height: 70px;
+    align-items: center;
+    position: fixed;
+    top:0;
+    left: 0;
+    width: 100%;
+    z-index: 1;
+    background: rgba(255,255,255,0.3);
+}
+header:hover{
+    background: rgba(255, 255, 255, 0.93);
 }
 .logo{
     flex: 1;
@@ -24,13 +34,17 @@ header{
     flex: 3;
     display: flex;
 }
-
+.row{
+    display: flex;
+    flex-wrap: wrap;
+}
 .menu >li{
     padding: 0 12px;
     position: relative;
 }
 .menu>li:hover .sub-menu{
     display: block;
+    background: #cccccc;
 }
 .menu >li a{
     font-size: 18px;
@@ -58,8 +72,114 @@ header{
 
     border: none;
     border-bottom: 1px solid #333;
+    background: transparent;
+    outline: none;
 }
 .khac>li:first-child i{
     position: absolute;
     right: 10px;
+}
+#Slider{
+    padding-bottom: 30px;
+    border-bottom: 2px solid #333333;
+    overflow: hidden;
+}
+.aspect-ratio-169 {
+    display: block;
+    position: relative;
+    padding-top: 56.25%;
+    transition: 0.3s;
+}
+
+.aspect-ratio-169 img {
+    display: block;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+}
+.dot-container{
+    position: absolute;
+    height: 30px;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    justify-content: center;
+
+}
+.dot{
+    height: 16px;
+    width: 16px;
+    background-color: #cccccc;
+    border-radius: 50%;
+    margin-right: 12px;
+}
+.dot.chon{
+    background-color: black;
+}
+.category{
+    padding: 100px 0 0;
+}
+.top{
+margin-bottom: 50px;
+}
+.top p{
+    font-family: Arial,Helvetica,sans-serif;
+    margin: 0 12px;
+    font-size: 12px;
+}
+.loc{
+    width: 100%;
+}
+.danhsachao:first-child{
+    flex: 2;
+    font-size: 16px;
+    font-family: Arial,Helvetica,sans-serif;
+    font-weight: bold;
+}
+.danhsachao{
+    flex: 1;
+    padding: 0 16px;
+}
+.danhsachao button{
+    width: 70%;
+    padding: 5px 3px;
+    display: flex;
+    justify-content: space-between;
+    background: #ffff;
+    border: 1px solid #cccccc;
+    cursor: pointer;
+}
+.danhsachao select{
+    width: 70%;
+    padding: 5px 3px;
+    display: flex;
+    justify-content: space-between;
+    background: #ffff;
+    border: 1px solid #cccccc;
+    cursor: pointer;
+}
+.hienthidanhsach{
+    margin-top: 20px;
+    justify-content: space-between;
+}
+.item{
+    width: calc(25% - 12px);
+    text-align: center;
+    padding: 12px;
+}
+.item h1{
+    font-size: 10px;
+    font-family: Arial,Helvetica,sans-serif;
+    margin-top: 6px;
+}
+.item img{
+    width: 100%;
+}
+.phantrang{
+    justify-content: space-between;
+    margin: 10px 0 10px;
+    width: 98%;
 }
