--- a/src/main/resources/templates/chitiet.html
+++ b/src/main/resources/templates/chitiet.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous"/>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/css/main_style.css">
     <title>Title</title>
 </head>
 <body>
@@ -34,15 +34,15 @@
         <div class="anhvachon row">
             <div class="anh row">
                 <div class="anhto">
-                    <img src="images/images%20(2).jfif" alt="">
+                    <img src="../static/hinhanh/images%20(2).jfif" alt="">
                 </div>
                 <div class="anhbe">
-                    <img src="images/mua-ao-bong-da-tai-long-bien.jpg" alt="">
-                    <img src="images/mua-ao-bong-da-tai-long-bien.jpg" alt="">
-                    <img src="images/mua-ao-bong-da-tai-long-bien.jpg" alt="">
+                    <img src="/hinhanh/mua-ao-bong-da-tai-long-bien.jpg" alt="">
+                    <img src="/hinhanh/mua-ao-bong-da-tai-long-bien.jpg" alt="">
+                    <img src="/hinhanh/mua-ao-bong-da-tai-long-bien.jpg" alt="">
                 </div>
             </div>
-            <div class="chon">
+            <div class="chonchitietao">
                 <div class="name">
                     <h1>ÁO ĐỘI TUYỂN QUỐC GIA PHÁP</h1>
                 </div>
