--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous"/>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../static/css/main_style.css">
     <title>Title</title>
 </head>
 <body>
@@ -43,7 +43,7 @@
                         <th>Xóa</th>
                     </tr>
                     <tr>
-                        <td><img src="images/tải%20xuống%20(1).jfif"></td>
+                        <td><img src="../static/hinhanh/tải%20xuống%20(1).jfif"></td>
                         <td><p>Quần áo tuyển Pháp</p></td>
                         <td><p>L</p></td>
                         <td><p><input type="number" value="1" min="1"></p></td>
@@ -51,7 +51,7 @@
                         <td><p>X</p></td>
                     </tr>
                     <tr>
-                        <td><img src="images/tải%20xuống%20(1).jfif"></td>
+                        <td><img src="../static/hinhanh/tải%20xuống%20(1).jfif"></td>
                         <td><p>Quần áo tuyển Pháp</p></td>
                         <td><p>L</p></td>
                         <td><p><input type="number" value="1" min="1"></p></td>
