--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,22 +1,22 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<!--    <meta name="viewport" content="width=device-width, initial-scale=1.0">-->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous"/>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" type="text/css" href="/css/main_style.css">
     <title>Title</title>
 </head>
 <body>
     <header>
         <div class="logo">
-            <img src="images/images.png">
+            <img src="../../java/com/example/totnghiep/giaodien/images.png">
         </div>
         <div class="menu">
             <li><a href="">Home</a></li>
             <li><a href="">Sản phẩm</a>
                 <ul class="sub-menu">
-                    <li><a href="">Áo câu lạc bộ</a></li>
+                    <li><a href="/api/v1/category/get">Áo câu lạc bộ</a></li>
                     <li><a href="">Áo đội tuyển quốc gia</a></li>
                 </ul>
             </li>
@@ -25,15 +25,15 @@
         <div class="khac">
             <li><input placeholder="Tìm kiếm" type="text"><i class="fas fa-search"></i> </li>
             <li> <a class="fa fa-paw" href="" ></a></li>
-            <li> <a class="fa fa-user" href="" ></a></li>
+            <li> <a class="fa fa-user" href = "/api/v1/user/login1" ></a></li>
             <li> <a class="fa fa-shopping-bag" href="" ></a></li>
         </div>
     </header>
     <section id="Slider">
         <div class="aspect-ratio-169">
-            <img src="images/shop-ban-quan-ao-bong-da-tai-Ha-Noi.jpg">
-            <img src="images/shop-ban-quan-ao-bong-da-tai-Lao-Cai-dep.jpg">
-            <img src="images/mua-ao-bong-da-tai-long-bien.jpg">
+            <img src="/hinhanh/a_b.jpg">
+            <img src="/hinhanh/shop-ban-quan-ao-bong-da-tai-Lao-Cai-dep.jpg">
+            <img src="/hinhanh/mua-ao-bong-da-tai-long-bien.jpg">
         </div>
         <div class="dot-container">
             <div class="dot chon"></div>
