--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous"/>
-    <link rel="stylesheet" href="../static/css/main_style.css">
+    <link rel="stylesheet" href="/css/main_style.css">
     <title>Title</title>
 </head>
 <body>
@@ -42,20 +42,12 @@
                         <th>Thành tiền</th>
                         <th>Xóa</th>
                     </tr>
-                    <tr>
-                        <td><img src="../static/hinhanh/tải%20xuống%20(1).jfif"></td>
-                        <td><p>Quần áo tuyển Pháp</p></td>
-                        <td><p>L</p></td>
-                        <td><p><input type="number" value="1" min="1"></p></td>
-                        <td><p>500000đ</p></td>
-                        <td><p>X</p></td>
-                    </tr>
-                    <tr>
-                        <td><img src="../static/hinhanh/tải%20xuống%20(1).jfif"></td>
-                        <td><p>Quần áo tuyển Pháp</p></td>
-                        <td><p>L</p></td>
-                        <td><p><input type="number" value="1" min="1"></p></td>
-                        <td><p>500000đ</p></td>
+                    <tr th:each="cartall: ${detailscartall}">
+                        <td><img th:src="*{'/hinhanh/'+cartall.image}"></td>
+                        <td><p th:text="${cartall.name}"></p></td>
+                        <td><p th:text="${cartall.size}"></p></td>
+                        <td><p><input type="number" th:value="${cartall.number}" ></p></td>
+                        <td><p th:text="${cartall.totalprice}"}>đ</p></td>
                         <td><p>X</p></td>
                     </tr>
                 </table>
