--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -16,7 +16,7 @@
             <li><a href="">Home</a></li>
             <li><a href="">Sản phẩm</a>
                 <ul class="sub-menu">
-                    <li><a href="/api/v1/category/get">Áo câu lạc bộ</a></li>
+                    <li><a th:href="${'/api/v1/category/get/' + idname}">Áo câu lạc bộ</a></li>
                     <li><a href="">Áo đội tuyển quốc gia</a></li>
                 </ul>
             </li>
