--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -38,7 +38,7 @@
 
         <div class="form-group">
           <button type="submit" class="btn btn-success">Login</button>
-          <span>Your dont have account? <a href="/" th:href="@{/registration}">Registration here</a></span>
+          <span>Your dont have account? <a href="/" th:href="@{/api/v1/user/dangky}">Registration here</a></span>
         </div>
       </form>
     </div>
