--- a/src/main/resources/templates/addcategory.html
+++ b/src/main/resources/templates/addcategory.html
@@ -1,10 +1,51 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+<html xmlns:th="http://www.thymeleaf.org">
+<head lang="en">
+  <title>Category</title>
 </head>
 <body>
+<div class="container">
+  <h2>Category</h2>
+  <div>
+    <form class="form-horizontal" th:object="${categorydto}" th:action="@{/api/v1/category/add}" method="post">
+<!--      <input type="hidden" th:field="*{id}"/>-->
+<!--      <input type="hidden" th:field="*{version}"/>-->
+      <div class="form-group">
+        <label class="col-sm-2 control-label">Name:</label>
+        <div class="col-sm-10">
+          <input type="text" class="form-control" th:field="*{name}"/>
+        </div>
+      </div>
+      <div class="form-group">
+        <label class="col-sm-2 control-label">Price:</label>
+        <div class="col-sm-10">
+          <input type="text" class="form-control" th:field="*{price}"/>
+        </div>
+      </div>
+      <div class="form-group">
+        <label class="col-sm-2 control-label">Size:</label>
+        <div class="col-sm-10">
+          <input type="text" class="form-control" th:field="*{size}"/>
+        </div>
+      </div>
+      <div class="form-group">
+        <label class="col-sm-2 control-label">Image:</label>
+        <div class="col-sm-10">
+          <input type="text" class="form-control" th:field="*{image}"/>
+        </div>
+      </div>
+      <div class="form-group">
+        <label class="col-sm-2 control-label">Number:</label>
+        <div class="col-sm-10">
+          <input type="text" class="form-control" th:field="*{number}"/>
+        </div>
+      </div>
+      <div class="row">
+        <button type="submit" class="btn btn-default">Submit</button>
+      </div>
+    </form>
+  </div>
+</div>
 
 </body>
 </html>
