--- a/src/main/resources/templates/paysucess.html
+++ b/src/main/resources/templates/paysucess.html
@@ -12,5 +12,6 @@
     <div class="form-group">
         <a  th:text="${tb}"></a></label>
     </div>
+    <li><a th:href="${'/index/get/' + idname}">Home</a></li>
 </body>
 </html>
