--- a/src/main/resources/templates/sanpham2.html
+++ b/src/main/resources/templates/sanpham2.html
@@ -43,7 +43,7 @@
                         <p>DANH SÁCH ÁO CÂU LẠC BỘ</p>
                     </div>
                     <div class="danhsachao">
-                        <form th:action="@{'/api/v1/category/min/' + ${idname}}">
+                        <form th:action="@{'/api/v1/category/min2/' + ${idname}}">
                             <select name="sapxep" id="sapxep">
                                 <option value="a">Sắp xếp</option>
                                 <option value="b">Giá thấp đến cao</option>
