--- a/src/main/resources/templates/addcategory.html
+++ b/src/main/resources/templates/addcategory.html
@@ -40,6 +40,18 @@
           <input type="text" class="form-control" th:field="*{number}"/>
         </div>
       </div>
+        <div class="form-group">
+            <label class="col-sm-2 control-label">Chi tiết:</label>
+            <div class="col-sm-10">
+                <input type="text" class="form-control" th:field="*{details}"/>
+            </div>
+        </div>
+        <div class="form-group">
+            <label class="col-sm-2 control-label">Type:</label>
+            <div class="col-sm-10">
+                <input type="text" class="form-control" th:field="*{type}"/>
+            </div>
+        </div>
       <div class="row">
         <button type="submit" class="btn btn-default">Submit</button>
       </div>
