--- a/src/main/resources/templates/editcategory.html
+++ b/src/main/resources/templates/editcategory.html
@@ -50,7 +50,18 @@
                 <input type="text" class="form-control" th:value="${categoryedit.number}" th:field="*{number}"/>
               </div>
             </div>
-
+              <div class="form-group">
+                  <label class="col-sm-2 control-label">Chi tiet:</label>
+                  <div class="col-sm-10">
+                      <input type="text" class="form-control" th:value="${categoryedit.details}" th:field="*{details}"/>
+                  </div>
+              </div>
+              <div class="form-group">
+                  <label class="col-sm-2 control-label">Kiểu:</label>
+                  <div class="col-sm-10">
+                      <input type="text" class="form-control" th:value="${categoryedit.type}" th:field="*{type}"/>
+                  </div>
+              </div>
             <div class="row">
               <button type="submit" class="btn btn-default">Submit</button>
             </div>
