--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -10,23 +10,23 @@
 <body>
     <header>
         <div class="logo">
-            <img src="../../java/com/example/totnghiep/giaodien/images.png">
+
         </div>
         <div class="menu">
-            <li><a href="">Home</a></li>
+            <li><a th:href="${'/index/get/' + idname}">Home</a></li>
             <li><a href="">Sản phẩm</a>
                 <ul class="sub-menu">
                     <li><a th:href="${'/api/v1/category/get/' + idname}">Áo câu lạc bộ</a></li>
-                    <li><a href="">Áo đội tuyển quốc gia</a></li>
+                    <li><a th:href="${'/api/v1/category/get2/' + idname}">Áo đội tuyển quốc gia</a></li>
                 </ul>
             </li>
             <li><a href="">Thông tin</a></li>
         </div>
         <div class="khac">
-            <li><input placeholder="Tìm kiếm" type="text"><i class="fas fa-search"></i> </li>
-            <li> <a class="fa fa-paw" href="" ></a></li>
+            <form th:action="@{'/api/v1/category/seach/' + ${idname}}"><li><input placeholder="Tìm kiếm" type="text" name="key"><input type="submit" class="fas fa-search"> </li></form>
+            <li> <a class="fa fa-paw" th:href="${'/index/get/' + idname}" ></a></li>
             <li> <a class="fa fa-user" href = "/api/v1/user/login1" ></a></li>
-            <li> <a class="fa fa-shopping-bag" href="" ></a></li>
+            <li> <a class="fa fa-shopping-bag" th:href="${'/api/v1/cart/getcartall/' + idname}" ></a></li>
         </div>
     </header>
     <section id="Slider">
