--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -18,8 +18,7 @@
         <li><a href="/api/v1/bill/getadminbill">Quản lý Bill</a></li>
     </div>
     <div class="khac">
-        <li><input placeholder="Tìm kiếm" type="text"><i class="fas fa-search"></i> </li>
-        <li> <a class="fa fa-user" href="" ></a></li>
+        <li> <a class="fas fa-sign-out-alt" href = "/api/v1/user/login1" ></a></li>
     </div>
 </header>
 <section class="qlnd">
