--- a/src/main/resources/templates/admin2.html
+++ b/src/main/resources/templates/admin2.html
@@ -13,13 +13,12 @@
     <img src="">
   </div>
   <div class="menu">
-    <li><a href="/api/v1/category/getadminsp">Quản lý người dùng</a></li>
-    <li><a href="">Quản lý sản phẩm</a></li>
-    <li><a href="">Quản lý Bill</a></li>
+    <li><a href="/api/v1/thongke/getthongke">Thống Kê</a></li>
+    <li><a href="/api/v1/category/getadminsp">Quản lý sản phẩm</a></li>
+    <li><a href="/api/v1/bill/getadminbill">Quản lý Bill</a></li>
   </div>
   <div class="khac">
-    <li><input placeholder="Tìm kiếm" type="text"><i class="fas fa-search"></i> </li>
-    <li> <a class="fa fa-user" href="" ></a></li>
+    <li> <a class="fas fa-sign-out-alt" href = "/api/v1/user/login1" ></a></li>
   </div>
 </header>
 <section class="qlnd">
