--- a/src/main/resources/static/css/main_style.css
+++ b/src/main/resources/static/css/main_style.css
@@ -144,11 +144,11 @@ margin-bottom: 50px;
     padding: 0 16px;
 }
 .danhsachao button{
-    width: 70%;
+    width: 10%;
     padding: 5px 3px;
     display: flex;
     justify-content: space-between;
-    background: #ffff;
+    background: #2c69c4;
     border: 1px solid #cccccc;
     cursor: pointer;
 }
@@ -178,11 +178,7 @@ margin-bottom: 50px;
 .item img{
     width: 100%;
 }
-.phantrang{
-    justify-content: space-between;
-    margin: 10px 0 10px;
-    width: 98%;
-}
+
 .chitietsp{
     padding: 100px 0;
 }
@@ -193,18 +189,13 @@ margin-bottom: 50px;
     width: 50%;
 }
 .anhto{
-    width: 78%;
+    width: 100%;
     padding: 0 8px;
 }
 .anhto img{
     width: 100%;
 }
-.anhbe{
-    width: 20%;
-}
-.anhbe img{
-    width: 100%;
-}
+
 .name h1{
     font-size: 20px;
     font-family: Arial,Helvetica,sans-serif;
@@ -286,16 +277,7 @@ margin-bottom: 50px;
     font-family: Arial,Helvetica,sans-serif;
     color: rgb(35, 32, 32);
 }
-.cartall table input{
-    width: 50px;
-}
-.cartall table span{
-    display: block;
-    width: 20px;
-    height: 20px;
-    border: 2px solid rgba(35, 32, 32, 0.17);
-    cursor: pointer;
-}
+
 .cartall table img{
     width: 200px;
 }
@@ -304,7 +286,7 @@ margin-bottom: 50px;
     border-bottom: 2px solid rgba(35, 32, 32, 0.17);;
 }
 .tongtinh{
-    flex: 1;
+    flex: 2;
     padding-left: 90px;
     padding-top: 50px;
     border-left: 2px solid rgba(35, 32, 32, 0.17);
@@ -334,12 +316,17 @@ margin-bottom: 50px;
     text-align: center;
     align-items: center;
 }
-.nutthanhtoan button{
+.nutthanhtoan a{
     padding: 0 10px;
     height: 30px;
     cursor: pointer;
 }
-.nutthanhtoan button:first-child{
+.nutthanhtoan a:first-child{
+    background-color: rgba(255, 255, 255, 0.48);
+    border: 3px solid rgba(35, 32, 32, 0.17);
+    margin-right: 20px;
+}
+.nutthanhtoan a:last-child{
     background-color: rgba(255, 255, 255, 0.48);
     border: 3px solid rgba(35, 32, 32, 0.17);
     margin-right: 20px;
