--- a/src/main/resources/templates/addcategory.html
+++ b/src/main/resources/templates/addcategory.html
@@ -1,5 +1,37 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
+<style>
+    input[type=text], select {
+        width: 100%;
+        padding: 12px 20px;
+        margin: 8px 0;
+        display: inline-block;
+        border: 1px solid #ccc;
+        border-radius: 4px;
+        box-sizing: border-box;
+    }
+
+    input[type=submit] {
+        width: 100%;
+        background-color: #4CAF50;
+        color: white;
+        padding: 14px 20px;
+        margin: 8px 0;
+        border: none;
+        border-radius: 4px;
+        cursor: pointer;
+    }
+
+    input[type=submit]:hover {
+        background-color: #45a049;
+    }
+
+    div {
+        border-radius: 5px;
+        background-color: #f2f2f2;
+        padding: 20px;
+    }
+</style>
 <head lang="en">
   <title>Category</title>
 </head>
@@ -7,57 +39,24 @@
 <div class="container">
   <h2>Category</h2>
   <div>
-    <form class="form-horizontal" th:object="${categorydto}" th:action="@{/api/v1/category/add}" method="post">
-<!--      <input type="hidden" th:field="*{id}"/>-->
-<!--      <input type="hidden" th:field="*{version}"/>-->
-      <div class="form-group">
+    <form  th:object="${categorydto}" th:action="@{/api/v1/category/add}" method="post">
         <label class="col-sm-2 control-label">Name:</label>
-        <div class="col-sm-10">
           <input type="text" class="form-control" th:field="*{name}"/>
-        </div>
-      </div>
-      <div class="form-group">
         <label class="col-sm-2 control-label">Price:</label>
-        <div class="col-sm-10">
           <input type="text" class="form-control" th:field="*{price}"/>
-        </div>
-      </div>
-      <div class="form-group">
         <label class="col-sm-2 control-label">Size:</label>
-        <div class="col-sm-10">
           <input type="text" class="form-control" th:field="*{size}"/>
-        </div>
-      </div>
-      <div class="form-group">
         <label class="col-sm-2 control-label">Image:</label>
-        <div class="col-sm-10">
           <input type="text" class="form-control" th:field="*{image}"/>
-        </div>
-      </div>
-      <div class="form-group">
         <label class="col-sm-2 control-label">Number:</label>
-        <div class="col-sm-10">
           <input type="text" class="form-control" th:field="*{number}"/>
-        </div>
-      </div>
-        <div class="form-group">
-            <label class="col-sm-2 control-label">Chi tiết:</label>
-            <div class="col-sm-10">
-                <input type="text" class="form-control" th:field="*{details}"/>
-            </div>
-        </div>
-        <div class="form-group">
-            <label class="col-sm-2 control-label">Type:</label>
-            <div class="col-sm-10">
-                <input type="text" class="form-control" th:field="*{type}"/>
-            </div>
-        </div>
-      <div class="row">
-        <button type="submit" class="btn btn-default">Submit</button>
-      </div>
+        <label class="col-sm-2 control-label">Chi tiết:</label>
+            <input type="text" class="form-control" th:field="*{details}"/>
+        <label class="col-sm-2 control-label">Type:</label>
+            <input type="text" class="form-control" th:field="*{type}"/>
+        <input type="submit" class="btn btn-default"></input>
     </form>
   </div>
 </div>
-
 </body>
 </html>
