--- a/src/main/resources/templates/dangky.html
+++ b/src/main/resources/templates/dangky.html
@@ -1,5 +1,37 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
+<style>
+  input[type=text], select {
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+  }
+
+  input[type=submit] {
+    width: 100%;
+    background-color: #4CAF50;
+    color: white;
+    padding: 14px 20px;
+    margin: 8px 0;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+  }
+
+  input[type=submit]:hover {
+    background-color: #45a049;
+  }
+
+  div {
+    border-radius: 5px;
+    background-color: #f2f2f2;
+    padding: 20px;
+  }
+</style>
 <head>
   <meta charset="ISO-8859-1">
   <title>Insert title here</title>
@@ -26,9 +58,11 @@
                 <label>Enter Password</label> <input type="text"
                                                      name="password" class="form-control">
               </div>
-              <div th:if="${param.passwordwrong}">
-                <div class="alert alert-info"> Your email is not correct</div>
+              <div class="mb-3">
+                <label>Enter again Password</label> <input type="text"
+                                                      class="form-control">
               </div>
+
               <button class="btn btn-primary col-md-12">Register</button>
             </form>
           </div>
