--- a/src/main/resources/templates/editcategory.html
+++ b/src/main/resources/templates/editcategory.html
@@ -1,7 +1,39 @@
 <!doctype html>
 <html lang="en" xmlns:th="http://www.thymeleaf.com">
+<style>
+    input[type=text], select {
+        width: 100%;
+        padding: 12px 20px;
+        margin: 8px 0;
+        display: inline-block;
+        border: 1px solid #ccc;
+        border-radius: 4px;
+        box-sizing: border-box;
+    }
+
+    input[type=submit] {
+        width: 100%;
+        background-color: #4CAF50;
+        color: white;
+        padding: 14px 20px;
+        margin: 8px 0;
+        border: none;
+        border-radius: 4px;
+        cursor: pointer;
+    }
+
+    input[type=submit]:hover {
+        background-color: #45a049;
+    }
+
+    div {
+        border-radius: 5px;
+        background-color: #f2f2f2;
+        padding: 20px;
+    }
+</style>
 <head>
-  <!-- Required meta tags -->
+
   <meta charset="utf-8">
   <meta name="viewport"
         content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -18,53 +50,35 @@
           <h4 class="text-center text-primary">Edit Emp</h4>
 
           <form class="form-horizontal" th:object="${categoryedit}" th:action="@{'/api/v1/category/edit/' + ${categoryedit.id}}" method="post"  >
-<!--            <input type="hidden" th:value="${categoryedit.id}" name="id">-->
 
-            <div class="form-group">
               <label class="col-sm-2 control-label">Name:</label>
-              <div class="col-sm-10">
                 <input type="text" class="form-control" th:value="${categoryedit.name}" th:field="*{name}"/>
-              </div>
-            </div>
-            <div class="form-group">
+
               <label class="col-sm-2 control-label">Price:</label>
-              <div class="col-sm-10">
+
                 <input type="text" class="form-control" th:value="${categoryedit.price}" th:field="*{price}"/>
-              </div>
-            </div>
-            <div class="form-group">
+
               <label class="col-sm-2 control-label">Size:</label>
-              <div class="col-sm-10">
+
                 <input type="text" class="form-control" th:value="${categoryedit.size}" th:field="*{size}"/>
-              </div>
-            </div>
-            <div class="form-group">
+
               <label class="col-sm-2 control-label">Image:</label>
-              <div class="col-sm-10">
                 <input type="text" class="form-control" th:value="${categoryedit.image}" th:field="*{image}"/>
-              </div>
-            </div>
-            <div class="form-group">
+
               <label class="col-sm-2 control-label">Number:</label>
-              <div class="col-sm-10">
+
                 <input type="text" class="form-control" th:value="${categoryedit.number}" th:field="*{number}"/>
-              </div>
-            </div>
-              <div class="form-group">
+
                   <label class="col-sm-2 control-label">Chi tiet:</label>
-                  <div class="col-sm-10">
+
                       <input type="text" class="form-control" th:value="${categoryedit.details}" th:field="*{details}"/>
-                  </div>
-              </div>
-              <div class="form-group">
+
                   <label class="col-sm-2 control-label">Kiểu:</label>
-                  <div class="col-sm-10">
+
                       <input type="text" class="form-control" th:value="${categoryedit.type}" th:field="*{type}"/>
-                  </div>
-              </div>
-            <div class="row">
-              <button type="submit" class="btn btn-default">Submit</button>
-            </div>
+
+              <input type="submit" class="btn btn-default"></input>
+
 
           </form>
         </div>
