--- a/src/main/resources/templates/payment.html
+++ b/src/main/resources/templates/payment.html
@@ -1,5 +1,37 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
+<style>
+  input[type=text], select {
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+  }
+
+  input[type=submit] {
+    width: 100%;
+    background-color: #4CAF50;
+    color: white;
+    padding: 14px 20px;
+    margin: 8px 0;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+  }
+
+  input[type=submit]:hover {
+    background-color: #45a049;
+  }
+
+  div {
+    border-radius: 5px;
+    background-color: #f2f2f2;
+    padding: 20px;
+  }
+</style>
 <head lang="en">
   <title>Category</title>
 </head>
@@ -8,24 +40,19 @@
   <h2>Payment</h2>
   <div>
     <form class="form-horizontal" th:object="${paymentdto}" th:action="@{/api/v1/payment/add}" method="post">
-      <div class="form-group">
+
         <label class="col-sm-2 control-label">Name:</label>
-        <div class="col-sm-10">
+
           <input type="text" class="form-control" th:field="*{name}"/>
-        </div>
-      </div>
-      <div class="form-group">
+
         <label class="col-sm-2 control-label">Dia chi:</label>
-        <div class="col-sm-10">
+
           <input type="text" class="form-control" th:field="*{address}"/>
-        </div>
-      </div>
-      <div class="form-group">
+
         <label class="col-sm-2 control-label">Tel:</label>
-        <div class="col-sm-10">
+
           <input type="text" class="form-control" th:field="*{tel}"/>
-        </div>
-      </div>
+
         <input type="hidden" class="form-control" th:value="${cart.id}" id="cartid" name="cartid">
         <input type="hidden" class="form-control" th:value="${cart.pricetotal}" id="paymenttotal" name="paymenttotal">
       <h2>Chi tiet hoa don</h2>
@@ -34,7 +61,7 @@
       </div>
 
       <div class="row">
-        <button type="submit" class="btn btn-default">Thanh toan</button>
+        <input type="submit" class="btn btn-default">
       </div>
     </form>
   </div>
