--- a/src/main/resources/templates/sanpham1.html
+++ b/src/main/resources/templates/sanpham1.html
@@ -16,23 +16,22 @@
         <li><a th:href="${'/index/get/' + idname}">Home</a></li>
         <li><a href="">Sản phẩm</a>
             <ul class="sub-menu">
-                <li><a th:href="${'/api/v1/category/get/' + idname}">Áo câu lạc bộ</a></li>
-                <li><a th:href="${'/api/v1/category/get2/' + idname}">Áo đội tuyển quốc gia</a></li>
+                <li><a th:href="${'/api/v1/category/get/' + idname}">Áo đội tuyển quốc gia</a></li>
+                <li><a th:href="${'/api/v1/category/get2/' + idname}">Áo câu lạc bộ</a></li>
             </ul>
         </li>
-        <li><a href="">Thông tin</a></li>
+        <li><a th:href="${'/api/v1/customer/get/' + idname}">Thông tin</a></li>
     </div>
     <div class="khac">
-        <form th:action="@{'/api/v1/category/seach/' + ${idname}}"><li><input placeholder="Tìm kiếm" type="text" name="key"><input type="submit" class="fas fa-search"> </li></form>
-        <li> <a class="fa fa-paw" th:href="${'/index/get/' + idname}" ></a></li>
-        <li> <a class="fa fa-user" href = "/api/v1/user/login1" ></a></li>
+        <form th:action="@{'/api/v1/category/seach/' + ${idname}}"><li><input placeholder="Tìm kiếm" type="text" name="key"><button type="submit" class="fas fa-search"> </button></li></form>
+        <li> <a class="fas fa-sign-out-alt" href = "/api/v1/user/login1" ></a></li>
         <li> <a class="fa fa-shopping-bag" th:href="${'/api/v1/cart/getcartall/' + idname}" ></a></li>
     </div>
 </header>
 <section class="category">
     <div class="con">
         <div class="top row">
-            <p>Trang chu</p><span>&#10230;</span><p>Áo câu lạc bộ</p>
+            <p>Trang chu</p><span>&#10230;</span><p>Áo đội tuyển quốc gia</p>
         </div>
     </div>
     <div class="con">
@@ -40,9 +39,9 @@
             <div class="danhsach">
                 <div class="loc row">
                     <div class="danhsachao">
-                        <p>DANH SÁCH ÁO CÂU LẠC BỘ</p>
+                        <p>DANH SÁCH ÁO ĐỘI TUYỂN QUỐC GIA</p>
                     </div>
-                    <div class="danhsachao">
+                    <div class="danhsachao ">
                         <form th:action="@{'/api/v1/category/min/' + ${idname}}">
                             <select name="sapxep" id="sapxep">
                                 <option value="a">Sắp xếp</option>
@@ -60,14 +59,6 @@
                         <h1 th:text="${category.name}"></h1>
                         <p th:text="${category.price}"></p>
                         <a th:href="${'/api/v1/category/getchitiet/' + category.getId()+'/'+idname}"> Them</a>
-                    </div>
-                </div>
-                <div class="phantrang row">
-                    <div class="chontrang ">
-
-                    </div>
-                    <div class="chontrang ">
-                        <p><span>&#171;</span>1 2 3 4 5<span>&#187;</span>Trang cuối</p>
                     </div>
                 </div>
             </div>
